# nhl-team-analytics-demo

./: .gitignore  DEMO.md  README.md  TASKS.md  app.yaml  databricks.yml  deploy.sh  requirements.txt
backend/: main.py  pyproject.toml
backend/static/: index.html
backend/static/assets/: index-77KYChYm.js  index-CGGlNCFo.css  index-Cvad3PcS.js  index-CxMRxu1u.js  index-DjD1nxI3.css  index-XPx--Qb0.css
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: CapBreakdown.tsx  CapOverview.tsx  CommentsPanel.tsx  GoalieStats.tsx  IceRink.tsx  InjuryReport.tsx  PlayerContracts.tsx  PointLeaders.tsx  Schedule.tsx  Sidebar.tsx  Standings.tsx  StandingsView.tsx  TeamHeader.tsx
frontend/src/pages/: AIChatPage.tsx  ContractsPage.tsx  GameSummaryPage.tsx  MainPage.tsx  PlayoffsPage.tsx  RosterPage.tsx  VideoReviewPage.tsx
pipeline/: ingest_nhl_data.py  manage_injuries.py  setup_lakebase.py
